--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,13 @@
 # 后端服务地址
-NEXT_PUBLIC_SERVICE_URL = "http://192.168.5.26"
+NEXT_PUBLIC_SERVICE_URL = "http://localhost" # 开发
+# NEXT_PUBLIC_SERVICE_URL = "https://api.lukaka.work" # 生产
 
 # 后端服务端口
-NEXT_PUBLIC_SERVICE_PORT = '9101'
+NEXT_PUBLIC_SERVICE_PORT = '3000' # 开发
+# NEXT_PUBLIC_SERVICE_PORT = '' # 生产
 
 # 后端服务前缀
-NEXT_PUBLIC_SERVICE_PREFIX = '/api'
+NEXT_PUBLIC_SERVICE_PREFIX = '/hotSearch'
 
 # web socket 地址
 NEXT_PUBLIC_SOCKET_URL = 'ws://192.168.5.26:9101/ws'
