--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,11 @@
 # 后端服务地址
-NEXT_PUBLIC_SERVICE_URL = "http://192.168.5.26"
+NEXT_PUBLIC_SERVICE_URL = "https://api.lukaka.work"
 
 # 后端服务端口
-NEXT_PUBLIC_SERVICE_PORT = '9101'
+NEXT_PUBLIC_SERVICE_PORT = ''
 
 # 后端服务前缀
-NEXT_PUBLIC_SERVICE_PREFIX = '/api'
+NEXT_PUBLIC_SERVICE_PREFIX = '/hotSearch'
 
 # web socket 地址
 NEXT_PUBLIC_SOCKET_URL = 'ws://192.168.5.26:9101/ws'
