--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # 后端服务地址
-NEXT_PUBLIC_SERVICE_URL = "http://localhost" # 开发
+NEXT_PUBLIC_SERVICE_URL = "http://127.0.0.1" # 开发
 # NEXT_PUBLIC_SERVICE_URL = "https://api.lukaka.work" # 生产
 
 # 后端服务端口
