--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/react": "2.7.6",
+    "@heroui/react": "2.8.0-beta.2",
     "@tailwindcss/postcss": "^4.1.4",
     "framer-motion": "^11.17.0",
     "next": "15.1.4",
