--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.2",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@heroui/react": "2.8.0-beta.2",
     "@tailwindcss/postcss": "^4.1.4",
+    "antd": "^5.24.8",
     "framer-motion": "^11.17.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
