--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/nextjs-registry": "^1.0.2",
-    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@heroui/react": "2.8.0-beta.2",
     "@tailwindcss/postcss": "^4.1.4",
-    "antd": "^5.24.8",
     "framer-motion": "^11.17.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
@@ -26,10 +23,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@iconify/json": "^2.2.332",
     "@iconify/react": "^5.2.0",
+    "@iconify/tailwind4": "^1.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.28",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "typescript": "^5"
