--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.503.0",
-    "next": "15.1.4",
+    "next": "15.3.1",
     "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "query-string": "^9.1.1",
@@ -31,6 +31,7 @@
     "@iconify/json": "^2.2.332",
     "@iconify/react": "^5.2.0",
     "@iconify/tailwind4": "^1.0.6",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
