chore(env): 调整接口前缀配置

--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,7 @@ NEXT_PUBLIC_SERVICE_PORT = '3000' # 开发
 # NEXT_PUBLIC_SERVICE_PORT = '' # 生产
 
 # 后端服务前缀
-NEXT_PUBLIC_SERVICE_PREFIX = '/hotSearch'
+NEXT_PUBLIC_SERVICE_PREFIX = '/dailyHotSearch'
 
 # web socket 地址
 NEXT_PUBLIC_SOCKET_URL = 'ws://192.168.5.26:9101/ws'
