--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ NEXT_PUBLIC_SERVICE_URL = "https://api.lukaka.work"
 NEXT_PUBLIC_SERVICE_PORT = ''
 
 # 后端服务前缀
-NEXT_PUBLIC_SERVICE_PREFIX = '/hotSearch'
+NEXT_PUBLIC_SERVICE_PREFIX = '/dailyHotSearch'
 
 # web socket 地址
 NEXT_PUBLIC_SOCKET_URL = 'ws://192.168.5.26:9101/ws'
